--- a/src/DirTree File Finder/DirTree File Finder/DirTree File Finder.csproj
+++ b/src/DirTree File Finder/DirTree File Finder/DirTree File Finder.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base_Class_Searcher.cs" />
+    <Compile Include="BFS.cs" />
+    <Compile Include="DFS.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
